--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": ">=8.5.0"
+  },
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "csvtojson": "^1.1.9",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
